--- a/jscripts/tiny_mce/themes/advanced/link.htm
+++ b/jscripts/tiny_mce/themes/advanced/link.htm
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="js/link.js?v={tinymce_version}"></script>
 </head>
 <body id="link" style="display: none">
-<form onsubmit="LinkDialog.update();return false;" action="#">
+<form onsubmit="LinkDialog.checkPrefix(this);LinkDialog.update();return false;" action="#">
 	<div class="tabs">
 		<ul>
 			<li id="general_tab" class="current"><span><a href="javascript:mcTabs.displayTab('general_tab','general_panel');" onmousedown="return false;">{#advanced_dlg.link_title}</a></span></li>
@@ -24,7 +24,7 @@
             <td class="nowrap"><label for="href">{#advanced_dlg.link_url}</label></td>
             <td><table border="0" cellspacing="0" cellpadding="0"> 
 				  <tr> 
-					<td><input id="href" name="href" type="text" class="mceFocus" value="" style="width: 200px" onchange="LinkDialog.checkPrefix(this);" /></td> 
+					<td><input id="href" name="href" type="text" class="mceFocus" value="" style="width: 200px" /></td> 
 					<td id="hrefbrowsercontainer">&nbsp;</td>
 				  </tr> 
 				</table></td>
