--- a/jscripts/tiny_mce/themes/advanced/source_editor.htm
+++ b/jscripts/tiny_mce/themes/advanced/source_editor.htm
@@ -14,9 +14,14 @@
 
 		<br style="clear: both" />
 
+		<div id="top" class="mceActionPanel">
+			<input type="submit" name="insert" value="{#update}" id="insert" />
+			<input type="button" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" id="cancel" />
+		</div>
+		
 		<textarea name="htmlSource" id="htmlSource" rows="15" cols="100" style="width: 100%; height: 100%; font-family: 'Courier New',Courier,monospace; font-size: 12px;" dir="ltr" wrap="off" class="mceFocus"></textarea>
 
-		<div class="mceActionPanel">
+		<div id="bottom" class="mceActionPanel">
 			<input type="submit" name="insert" value="{#update}" id="insert" />
 			<input type="button" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" id="cancel" />
 		</div>
